try to fix z-index problem
把...顯示全部的部分移到兩側，但右側不知為何灰色框框無法吻合長度？

--- a/css/site.css
+++ b/css/site.css
@@ -416,7 +416,6 @@
   border: solid 2px black;
   width: 50vmin;
   height: 60vmin;
-  z-index: 14;
 }
 
 .img_wrapper{
